--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts"
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "koa": "^2.13.4",
@@ -16,7 +17,9 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
     "nodemon": "^2.0.15",
+    "prettier": "2.5.1",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0"
   }
